--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ requests==2.31.0
 python-binance==1.0.22
 psycopg2-binary==2.9.9
 urllib3==1.26.18
-pandas==2.0.3
+pandas==1.5.3
+scipy==1.10.1
+numpy==1.24.3
