--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 Flask==2.3.2
 requests==2.31.0
 python-binance==1.0.22
-psycopg2-binary==2.9.9
-urllib3==1.26.18
 pandas==1.5.3
-scipy==1.9.3
+scipy==1.9.3; python_version < '3.12'
 numpy==1.24.3
+urllib3==1.26.16
