--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.3.2
+python-binance==1.0.19
 requests==2.31.0
-python-binance==1.0.22
-pandas==1.5.3
-scipy==1.9.3; python_version < '3.12'
+pandas==2.0.3
 numpy==1.24.3
+scipy==1.10.1
+aiohttp==3.8.4
 urllib3==1.26.16
