--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-Flask==2.3.2
+Flask==2.2.3
 python-binance==1.0.19
 requests==2.31.0
-pandas==2.0.3
 numpy==1.24.3
-scipy==1.10.1
-aiohttp==3.8.4
-urllib3==1.26.16
+gunicorn==21.2.0
