--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-flask==3.0.3
-flask-cors==4.0.0
-python-binance==1.0.24
-requests==2.32.3
-numpy==1.26.4
-pandas==2.2.2  # 添加 pandas 以增强技术指标计算
+Flask>=2.3.0,<3.0.0
+requests>=2.28.0,<3.0.0
+python-binance>=1.0.0,<2.0.0
+numpy>=1.21.0,<2.0.0
+flask-cors>=3.0.0,<4.0.0
+gunicorn>=20.0.0,<22.0.0
